2002-09-30 00:31  jrfonseca

	* aclocal.m4, autogen.sh, config.guess, config.sub, configure.ac,
	configure.in, install-sh, missing, mkinstalldirs,
	dos2unix/Makefile.am, dos2unix/dos2unix.c, dos2unix/dos2unix.h,
	drmingw/Makefile.am, drmingw/Makefile.old,
	drmingw/include/libiberty.h, pexports/Makefile.am, pexports/hlex.c,
	pexports/hparse.c, redir/Makefile.am, redir/redir.c,
	res2coff/README, res2coff/objimage.c, res2coff/readme.1st,
	res2coff/res2coff.h, scripts/Makefile.am, unix2dos/Makefile.am,
	unix2dos/unix2dos.c, unix2dos/unix2dos.h: Removed files which are
	autogenerated and shouldn't be in CVS.	Switched to the new
	versions of autotools.	Fixing to the #endif preprocessing symbols
	of dos2unix/unix2dos to make gcc happy.  Removed the dependency of
	libliberty from the redir source.

2002-05-26 11:13  infidel

	* drmingw/Makefile.old, drmingw/doc/drmingw.html, pexports/README,
	pexports/hparse.h, pexports/pexports.h, reimp/README,
	res2coff/objimage.c, res2coff/protos.h, res2coff/readme.1st,
	res2coff/res2coff.c, res2coff/res2coff.h, res2coff/resimage.c,
	scripts/a2dll.html, scripts/a2dll.in, scripts/static2dll_howto.txt:
	Convert some text files to Unix format

2002-05-20 21:49  jrfonseca

	* redir/: Makefile.am, README, redir.c: added redir which somehow
	had been forgoten in the previous commits

2002-05-20 21:39  jrfonseca

	* drmingw/: exchndl.c, symbols.c: Fixed potential use of an
	uninitialized variable (Steve Whiteley)

2002-05-14 21:38  jrfonseca

	* Makefile.am, configure.in, res2coff/Makefile.am,
	res2coff/objimage.c, res2coff/protos.h, res2coff/readme.1st,
	res2coff/res2coff.c, res2coff/res2coff.h, res2coff/resimage.c:
	Added res2coff: a binary resource to COFF object format converter.

2002-04-10 14:39  jrfonseca

	* AUTHORS, COPYING, ChangeLog, INSTALL, Makefile.am, NEWS, README,
	aclocal.m4, autogen.sh, config.guess, config.sub, configure.in,
	install-sh, missing, mkinstalldirs, dos2unix/COPYRIGHT,