@@ -1,3 +1,15 @@
+2002-09-30 00:50  jrfonseca
+
+	* AUTHORS, ChangeLog, configure.ac, drmingw/include/getopt.h: Added
+	yours truly to the AUTHORS.  Included getopt.h into the distro. 
+	Updated the Changelog.
+
+2002-09-30 00:49  jrfonseca
+
+	* scripts/dsw2mak.in: The dsw2awk script is now generated by the
+	autotools using information such as host_alias to automatically use
+	the correct set of applications when cross-compiling.
+
 2002-09-30 00:31  jrfonseca
 
 	* aclocal.m4, autogen.sh, config.guess, config.sub, configure.ac,
